Fix arrow alignment [deploy: staging]

--- a/src/stylesheets/modules/_slide.scss
+++ b/src/stylesheets/modules/_slide.scss
@@ -121,7 +121,7 @@ $image-size: 20rem;
   width: 100%;
 
   .flickity-prev-next-button {
-    transform: scale(0.75) translateY(-25%);
+    transform: scale(0.75) translateY(-50%);
   }
 }
 
